[tool.poetry]
name = "terra-bites"
version = "0.1.0"
description = "Your one-stop repository for storing and accessing Earth-related data."
authors = ["Mfon Eti-mfon <mfonetimfon@gmail.com>"]
maintainers = ["Mfon Eti-mfon <mfonetimfon@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
